@@ -44,9 +44,6 @@
 
 ## basic
 
-# force the server VM
--server
-
 # explicitly set the stack size
 -Xss1m
 
@@ -84,13 +81,16 @@
 # ensure the directory exists and has sufficient space
 ${heap.dump.path}
 
-## GC logging
+## JDK 8 GC logging
 
--XX:+PrintGCDetails
--XX:+PrintGCDateStamps
--XX:+PrintTenuringDistribution
--XX:+PrintGCApplicationStoppedTime
--Xloggc:${loggc}
--XX:+UseGCLogFileRotation
--XX:NumberOfGCLogFiles=32
--XX:GCLogFileSize=64m
+8:-XX:+PrintGCDetails
+8:-XX:+PrintGCDateStamps
+8:-XX:+PrintTenuringDistribution
+8:-XX:+PrintGCApplicationStoppedTime
+8:-Xloggc:${loggc}
+8:-XX:+UseGCLogFileRotation
+8:-XX:NumberOfGCLogFiles=32
+8:-XX:GCLogFileSize=64m
+
+# JDK 9+ GC logging
+9-:-Xlog:gc*,gc+age=trace,safepoint:file=${loggc}:utctime,pid,tags:filecount=32,filesize=64m
